# claude-python-toolkit

./: .env.example  .gitignore  CLAUDE.md  CLAUDE.md.template  Makefile  Makefile.example  README.md  pyproject.toml  requirements.txt  run_local.sh  settings.example.json  settings.local.json  template.yaml  test_bedrock_tokyo.py  test_email_simple.py  test_lambda_local.py
.claude/commands/: add-feature.md  commit-push-close.md  implement.md  plan.md
.steering/20250214-AWSリソース構築/: design.md  requirements.md  tasklist.md
.steering/20260211-newsletter-mvp/: design.md  requirements.md  tasklist.md
.steering/20260214-SocialProof統合計算式の実装/: design.md  requirements.md  tasklist.md
.steering/20260214-add-feature-split/: design.md  requirements.md  tasklist.md
.steering/20260214-buzz-algorithm-improvement/: design.md  requirements.md  tasklist.md
.steering/20260214-interest-list-master/: design.md  requirements.md  tasklist.md
.steering/20260214-メールの体裁整える/: design.md  requirements.md  tasklist.md
.steering/20260215-BedrockThrottlingExceptionのリトライ機能を実装/: design.md  tasklist.md
.steering/20260215-Gmailで署名誤判定されないようメール本文フォーマットを調整/: tasklist.md
articles/: claude-code-shared-config-with-git-subtree.md
commands/: add-feature.md  claude-update.md  commit-push-close.md  implement.md  research-plan.md  spec-plan.md
config/: interests.yaml  sources.json  sources.yaml
docs/: architecture.md  development-guidelines.md  functional-design.md  glossary.md  product-requirements.md  repository-structure.md
scripts/: sam-deploy.sh  sync_env_to_ssm.py
src/: handler.py
(+102 files in other folders)
